# glcl

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: cli.rs  db.rs  main.rs
